# whirlwind

./: .gitmodules  Cargo.toml  Design.md  NOTICE  README.md
circuits/: .gitignore  README.md  build.sh  contract_deposit.circom  contract_swap.circom  contract_swap_nft.circom  contract_withdraw.circom  contract_withdraw_nft.circom  generate_keys.sh
circuits/lib/: merkleTree.circom
circuits/main/: deposit.circom  migrate.circom  swap.circom  withdraw.circom  withdraw_nft.circom
circuits/proofs/: Cargo.toml
circuits/proofs-js/: index.d.ts  make_proofs.ts  mdsMatrix.ts  package-lock.json  poseidon.ts  roundConstants.ts
circuits/proofs/src/: main.rs
circuits/verification_keys/: deposit.vk.json  migrate.vk.json  swap.vk.json  withdraw.vk.json
contracts/cw-juicer/: Cargo.toml
contracts/cw-juicer/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/whirlwind/: Cargo.toml  NOTICE
contracts/whirlwind-swap/: Cargo.toml
contracts/whirlwind-swap/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/whirlwind/src/: contract.rs  msg.rs  state.rs
generate-data/: Cargo.toml  README.md
generate-data/outputs/: proofInputs.json
generate-data/src/: main.rs
generate-proof-data/src/: main.rs
generate-proofs/: README.md  makeProofs.ts  package.json  tsconfig.json
generate-proofs/outputs/: deposit1.json  deposit2.json  migrate1.json  swap1.json  withdraw1.json
src/: coin_helpers.rs  contract.rs  msg.rs  state.rs  tests.rs
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/src/components/: BalancesTable.tsx  DataTable.tsx  LineChart.tsx  MembersView.tsx  ProposalsTable.tsx  StackedLineChart.tsx  TraderItem.tsx
web/src/components/layouts/: Layout.tsx  SwapLayout.tsx
web/src/components/ui/: table.tsx
web/src/jotai/: balances.ts
web/src/lib/: constants.ts  fmt.ts  handleError.ts  listings.json  prices.ts  utils.ts
web/src/pages/: _app.tsx  deposits.tsx  index.tsx  portfolio.tsx  proposals.tsx  swap.tsx  traders.tsx
web/src/pages/accounts/: [accountId].tsx  index.tsx
web/src/pages/home/: index.tsx  traders.tsx
web/src/pages/swap/: [accountId].tsx  index.tsx
web/src/styles/: globals.css
web/src/types/: Page.d.ts  index.d.ts  index.ts
