[workspace]
members = [
    "contracts/cw-juicer",
    "contracts/whirlwind-swap",
    "packages/lib",
    "circuits/proofs"
]

[workspace.dependencies]
cosmwasm-bignumber = "2.2.0"
cw2 = "1.0.1"
cw20 = "1.0.1"
lib = { path = "./packages/lib" }
arkworks-native-gadgets = { path = "./packages/arkworks-native-gadgets-0.5.3" }
