[package]
name = "cw-juicer"
version = "0.1.0"
edition = "2021"
authors = ["Juicer Protocol DAO <juicerprotocoldao@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
lib = { path = "../../packages/lib" }

cosmwasm-std = { version = "1.0.0" }
cw0 = { version = "0.10.2" }
cw2 = { version = "0.13.1" }
cw20 = { version = "0.13.1" }
cw-utils = { version = "0.13.4" }
cw-storage-plus = { version = "0.13.1" }
cosmwasm-schema = { version = "1.0.0" }
cosmwasm-bignumber = "2.2.0"
cosmwasm-storage = { version = "1.0.0" }

schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cw-multi-test = { version = "0.13.1" }
cw20-base = { version = "0.13.1", features = ["library"] }

[package.metadata.scripts]
optimize = """
docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.5
"""
